syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.pro3.grpcspringbootexample.grpc";

// TextConverter service definition
service TextConverter {
  rpc toUpper(RequestText) returns(ResponseText);
  rpc capitalizeFirstCharacter(RequestText) returns(ResponseText);
}
message RequestText {
  string input_text = 1;
}

message ResponseText {
  string output_text = 1;
}

